<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/inicio_bottom"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_navigation_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile_bottom"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_navigation_perfil"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/notification_bottom"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/bottom_navigation_notifications"
        app:showAsAction="ifRoom"/>

</menu>