<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.DetalleImagenActivity">

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_detail"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_detail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tvFechaDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fechacreacion_detail"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/borrar_detail"
        android:textColor="@color/color_blanco"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_personalizado"/>

</LinearLayout>