<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/imageViewFinteres"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvtitleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_molde_image"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tvDescriptionImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_image_molde"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tvFechaImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_creacion_molde_image"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" />


    </LinearLayout>




</android.support.v7.widget.CardView>