<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AddImageActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnBuscarImagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Buscar imagen"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"/>

        <ImageView
            android:id="@+id/imageCargada"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/no_photo"
            />


    </LinearLayout>

    <EditText
        android:id="@+id/etTitleImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_titulo_image"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/etDescriptionImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_description_image"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btnGuardarImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_btn_image"
        android:theme="@style/RaisedButtonDark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"/>

</LinearLayout>